// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowMoreButton renders correctly when at maxHeight 1`] = `
<div
  className="container"
>
  <div
    className="showMore"
    data-test="dhis2-dashboard-showmore-button"
    onClick={[Function]}
  >
    Show less
  </div>
</div>
`;

exports[`ShowMoreButton renders correctly when not at maxHeight 1`] = `
<div
  className="container"
>
  <div
    className="showMore"
    data-test="dhis2-dashboard-showmore-button"
    onClick={[Function]}
  >
    Show more
  </div>
</div>
`;
